--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="second">
             <div class="fixed-content">
                 <h1>Summary</h1>
-                <p>I am currently a Junior in the Ramaiah Institute Of Technology, Banglore, pursuing an undergraduate degree in Information Science and Engineering. My Aim is to seek a position in a reputed organization to utilize my technical skills and gain experience and to work with utmost sincerity towards the growth and success of the institution.<br> I am keen and very willing to learn and develop new skills.</p>
+                <p>I am currently a Senior in the Ramaiah Institute Of Technology, Banglore, pursuing an undergraduate degree in Information Science and Engineering. My Aim is to seek a position in a reputed organization to utilize my technical skills and gain experience and to work with utmost sincerity towards the growth and success of the institution.<br> I am keen and very willing to learn and develop new skills.</p>
             </div>
         </div>
 
